customizando arquitetura do projeto

--- a/src/app/pages/dashboard/dashboard.component.html
+++ b/src/app/pages/dashboard/dashboard.component.html
@@ -1,4 +1,4 @@
-<div class="row">
+<!-- <div class="row">
   <div class="col-xxxl-3 col-md-6">
     <ngx-status-card title="Light" type="primary">
       <i class="nb-lightbulb"></i>
@@ -22,7 +22,7 @@
       <i class="nb-coffee-maker"></i>
     </ngx-status-card>
   </div>
-</div>
+</div> -->
 
 <div class="row">
   <div class="col-xxxl-3 col-xxl-4 col-lg-5 col-md-6">
@@ -32,7 +32,7 @@
   <div class="col-xxxl-9 col-xxl-8 col-lg-7 col-md-6">
     <ngx-electricity></ngx-electricity>
   </div>
-</div>
+</div> 
 
 <div class="row">
   <div class="col-xxxl-9 col-xl-12">
