--- a/src/app/pages/dashboard/dashboard.component.html
+++ b/src/app/pages/dashboard/dashboard.component.html
@@ -24,6 +24,10 @@
   </div>
 </div> -->
 
+<div class="col-xxxl-12 col-xxl-12 col-lg-12 col-md-12">
+  <ngx-electricity></ngx-electricity>
+</div>
+
 <div class="row">
   <div class="col-xxxl-3 col-xxl-4 col-lg-5 col-md-6">
     <ngx-temperature></ngx-temperature>
@@ -32,7 +36,7 @@
   <div class="col-xxxl-9 col-xxl-8 col-lg-7 col-md-6">
     <ngx-electricity></ngx-electricity>
   </div>
-</div> 
+</div>
 
 <div class="row">
   <div class="col-xxxl-9 col-xl-12">
