customizando arquitetura do projeto

--- a/src/app/pages/dashboard/electricity/electricity.component.html
+++ b/src/app/pages/dashboard/electricity/electricity.component.html
@@ -5,18 +5,18 @@
       <div class="header-stats">
         
         <div class="stats-block">
-          <div class="subtitle">Consumed</div>
+          <div class="subtitle">Consumido</div>
           <div>
             <span class="value">816</span>
-            <span class="unit">kWh</span>
+            <span class="unit">L</span>
           </div>
         </div>
 
         <div class="stats-block">
-          <div class="subtitle">Spent</div>
+          <div class="subtitle">Custo</div>
           <div>
+            <span class="unit">R$</span>
             <span class="value">291</span>
-            <span class="unit">USD</span>
           </div>
         </div>
       </div>
