--- a/src/app/pages/dashboard/dashboard.component.html
+++ b/src/app/pages/dashboard/dashboard.component.html
@@ -1,11 +1,25 @@
-<!-- <div class="row">
+<div class="row">
   <div class="col-xxxl-3 col-md-6">
-    <ngx-status-card title="Light" type="primary">
-      <i class="nb-lightbulb"></i>
-    </ngx-status-card>
+    <ngx-solar [chartValue]="72"></ngx-solar>
   </div>
 
   <div class="col-xxxl-3 col-md-6">
+    <ngx-solar [chartValue]="72"></ngx-solar>
+  </div>
+
+
+</div>
+
+<div class="row">
+  <div class="col-xxxl-3 col-xxl-4 col-lg-5 col-md-6">
+    <ngx-temperature></ngx-temperature>
+  </div>
+
+  <div class="col-xxxl-9 col-xxl-8 col-lg-7 col-md-6">
+    <ngx-conta></ngx-conta>
+  </div>
+</div>
+<!-- <div class="col-xxxl-3 col-md-6">
     <ngx-status-card title="Roller Shades" type="success">
       <i class="nb-roller-shades"></i>
     </ngx-status-card>
@@ -23,23 +37,8 @@
     </ngx-status-card>
   </div>
 </div> -->
-
-<div class="col-xxxl-12 col-xxl-12 col-lg-12 col-md-12">
-  <ngx-electricity></ngx-electricity>
-</div>
-
 <div class="row">
-  <div class="col-xxxl-3 col-xxl-4 col-lg-5 col-md-6">
-    <ngx-temperature></ngx-temperature>
-  </div>
-
-  <div class="col-xxxl-9 col-xxl-8 col-lg-7 col-md-6">
+  <div class="col-xxxl-12 col-xxl-12 col-lg-12 col-md-12">
     <ngx-electricity></ngx-electricity>
-  </div>
-</div>
-
-<div class="row">
-  <div class="col-xxxl-9 col-xl-12">
-    <ngx-rooms></ngx-rooms>
   </div>
 </div>
