--- a/src/app/pages/dashboard/dashboard.component.html
+++ b/src/app/pages/dashboard/dashboard.component.html
@@ -4,7 +4,33 @@
   </div>
 
   <div class="col-xxxl-3 col-md-6">
-    <ngx-solar [chartValue]="72"></ngx-solar>
+    <ngx-traffic></ngx-traffic>
+  </div>
+</div>
+
+<div class="row">
+  <div class="col-xxxl-3 col-md-6">
+    <ngx-status-card title="Luz" type="primary">
+      <i class="nb-lightbulb"></i>
+    </ngx-status-card>
+  </div>
+
+  <div class="col-xxxl-3 col-md-6">
+    <ngx-status-card title="Sanduicheira" type="success">
+      <i class="nb-roller-shades"></i>
+    </ngx-status-card>
+  </div>
+
+  <div class="col-xxxl-3 col-md-6">
+    <ngx-status-card title="Audio Wireless" type="info">
+      <i class="nb-audio"></i>
+    </ngx-status-card>
+  </div>
+
+  <div class="col-xxxl-3 col-md-6">
+    <ngx-status-card title="Cafeteira" type="warning">
+      <i class="nb-coffee-maker"></i>
+    </ngx-status-card>
   </div>
 </div>
 
@@ -14,12 +40,16 @@
   </div>
 
   <div class="col-xxxl-9 col-xxl-8 col-lg-7 col-md-6">
-    <ngx-conta></ngx-conta>
+    <ngx-electricity></ngx-electricity>
   </div>
 </div>
 
 <div class="row">
-  <div class="col-xxxl-12 col-xxl-12 col-lg-12 col-md-12">
-    <ngx-electricity></ngx-electricity>
+  <div class="col-xxxl-9 col-xl-12">
+    <ngx-rooms></ngx-rooms>
+  </div>
+
+  <div class="col-12">
+    <ngx-security-cameras></ngx-security-cameras>
   </div>
 </div>
