--- a/src/app/pages/dashboard/kitten/kitten.component.html
+++ b/src/app/pages/dashboard/kitten/kitten.component.html
@@ -14,16 +14,16 @@
 
 
   <nb-card-footer>
-    <a href="https://akveo.github.io/react-native-ui-kitten" target="_blank">
+    <a href="https://Cassio.github.io/react-native-ui-kitten" target="_blank">
       <i class="ion-ios-world"></i>
     </a>
     <a href="https://itunes.apple.com/us/app/kitten-tricks/id1246143230" target="_blank">
       <i class="ion-social-apple"></i>
     </a>
-    <a href="https://play.google.com/store/apps/details?id=com.akveo.kittenTricks" target="_blank">
+    <a href="https://play.google.com/store/apps/details?id=com.Cassio.kittenTricks" target="_blank">
       <i class="ion-social-android"></i>
     </a>
-    <a href="https://github.com/akveo/react-native-ui-kitten" target="_blank">
+    <a href="https://github.com/Cassio/react-native-ui-kitten" target="_blank">
       <i class="ion-social-github"></i>
     </a>
   </nb-card-footer>
