--- a/src/app/pages/dashboard/team/team.component.html
+++ b/src/app/pages/dashboard/team/team.component.html
@@ -1,6 +1,6 @@
 <nb-card size="medium">
   <div class="team-photo">
-    <a href="mailto:contact@akveo.com">
+    <a href="mailto:contact@Cassio.com">
       <button type="button" class="btn btn-success btn-icon team-link">
         <i class="ion-paper-airplane"></i>
       </button>
@@ -9,7 +9,7 @@
 
   <div class="team-info">
     <div class="team-title">
-      <h2>Akveo Team</h2>
+      <h2>Cassio Team</h2>
     </div>
     <div class="team-subtitle">Design & Development</div>
     <div class="team-bio">
@@ -19,16 +19,16 @@
   </div>
 
   <div class="links">
-    <a href="https://www.akveo.com" target="_blank">
+    <a href="https://www.Cassio.com" target="_blank">
       <i class="ion-ios-world-outline"></i>
     </a>
-    <a href="https://www.facebook.com/akveo" target="_blank">
+    <a href="https://www.facebook.com/Cassio" target="_blank">
       <i class="ion-social-facebook"></i>
     </a>
-    <a href="https://twitter.com/akveo_inc" target="_blank">
+    <a href="https://twitter.com/Cassio_inc" target="_blank">
       <i class="ion-social-twitter"></i>
     </a>
-    <a href="https://github.com/akveo" target="_blank">
+    <a href="https://github.com/Cassio" target="_blank">
       <i class="ion-social-github"></i>
     </a>
   </div>
