--- a/src/app/pages/dashboard/temperature/temperature.component.html
+++ b/src/app/pages/dashboard/temperature/temperature.component.html
@@ -1,11 +1,11 @@
 <nb-card size="large">
   <nb-tabset fullWidth>
 
-    <nb-tab tabTitle="Gasto de água diário">
+    <nb-tab tabTitle="Temperatura">
 
       <div class="slider-container">
         <ngx-temperature-dragger [(value)]="temperature" (power)="temperatureOff = !$event"
-                                 [min]="10" [max]="1000" [disableArcColor]="colors.layoutBg"
+                                 [min]="12" [max]="30" [disableArcColor]="colors.layoutBg"
                                  [fillColors]="colors.temperature">
 
           <div class="slider-value-container"  [ngClass]="{ 'off': temperatureOff }">
@@ -13,10 +13,58 @@
               {{ temperatureOff ? '--' : (temperature | ngxRound) }}
             </div>
             <div class="desc">
-              Litros
+              Celsius
             </div>
           </div>
         </ngx-temperature-dragger>
+      </div>
+
+      <div [(ngModel)]="temperatureMode" ngbRadioGroup data-toggle="buttons"
+           class="btn-group btn-divided-group btn-outline-divided-group btn-group-full-width">
+        <label class="btn btn-icon">
+          <input type="radio" value="cool"/><i class="nb-snowy-circled"></i>
+        </label>
+        <label class="btn btn-icon">
+          <input type="radio" value="warm"/><i class="nb-sunny-circled"></i>
+        </label>
+        <label class="btn btn-icon">
+          <input type="radio" value="heat"/><i class="nb-flame-circled"></i>
+        </label>
+        <label class="btn btn-icon">
+          <input type="radio" value="fan"/><i class="nb-loop-circled"></i>
+        </label>
+      </div>
+    </nb-tab>
+
+    <nb-tab tabTitle="Umidade">
+
+      <div class="slider-container">
+        <ngx-temperature-dragger [(value)]="humidity" (power)="humidityOff = !$event"
+                                 [min]="0" [max]="100" [disableArcColor]="colors.layoutBg"
+                                 [fillColors]="colors.temperature">
+
+          <div class="slider-value-container"  [ngClass]="{ 'off': humidityOff }">
+            <div class="value humidity">
+              {{ humidityOff ? '--' : (humidity | ngxRound) }}
+            </div>
+          </div>
+        </ngx-temperature-dragger>
+      </div>
+
+      <div [(ngModel)]="humidityMode" ngbRadioGroup data-toggle="buttons"
+           class="btn-group btn-divided-group btn-outline-divided-group btn-group-full-width">
+        <label class="btn btn-icon">
+          <input type="radio" value="cool"/><i class="nb-snowy-circled"></i>
+        </label>
+        <label class="btn btn-icon">
+          <input type="radio" value="warm"/><i class="nb-sunny-circled"></i>
+        </label>
+        <label class="btn btn-icon">
+          <input type="radio" value="heat"/><i class="nb-flame-circled"></i>
+        </label>
+        <label class="btn btn-icon">
+          <input type="radio" value="fan"/><i class="nb-loop-circled"></i>
+        </label>
       </div>
     </nb-tab>
   </nb-tabset>
