--- a/src/app/pages/dashboard/rooms/player/player.component.scss
+++ b/src/app/pages/dashboard/rooms/player/player.component.scss
@@ -1,4 +1,4 @@
-@import '../../../../@theme/styles/themes';
+@import '../../../../shared/styles/themes';
 @import '~bootstrap/scss/mixins/breakpoints';
 @import '~@nebular/theme/components/card/card.component.theme';
 @import '~@nebular/theme/styles/global/bootstrap/breakpoints';
