--- a/src/app/pages/dashboard/rooms/room-selector/room-selector.component.scss
+++ b/src/app/pages/dashboard/rooms/room-selector/room-selector.component.scss
@@ -1,4 +1,4 @@
-@import '../../../../@theme/styles/themes';
+@import '../../../../shared/styles/themes';
 @import '~@nebular/theme/components/card/card.component.theme';
 
 @include nb-install-component() {
