--- a/src/app/pages/ui-features/buttons/hero-buttons/hero-buttons.component.scss
+++ b/src/app/pages/ui-features/buttons/hero-buttons/hero-buttons.component.scss
@@ -1,4 +1,4 @@
-@import '../../../../@theme/styles/themes';
+@import '../../../../shared/styles/themes';
 @import '~@nebular/theme/styles/global/bootstrap/buttons';
 
 @include nb-install-component() {
